--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="input-group"><label>Password</label><input type="password" id="passwordInput"
                         value="password"></div>
                 <button class="cta-btn" id="loginBtn">Login</button>
-                <p class="hint">Hint: Use 'user' as your username.</p>
+                <p class="hint">Hint: Use 'user' as your username & password.</p>
             </div>
         </div>
         <!-- Report/Edit Issue Modal -->
